--- a/index.html
+++ b/index.html
@@ -15,21 +15,21 @@
 					</li>
 				</ul>
 			</div>
-			<div class= "box one">
+			<div class= "box one"><a href= "causes.html">
 				<br>
-				<center>Causes of disappearences in the Bermuda Triangle</center>
+				<center>The Legend</center></a>
 			</div>
-			<div class= "box two">
+			<div class= "box two"><a href= "theories.html">
 				<br>
-				<center> Different Conspiracy Theories </center> 
+				<center> Different Conspiracy Theories </center></a>
 			</div>
-			<div class= "box three">
+			<div class= "box three"><a href= "lost.html">
 				<br>
-				<center> Lost at Sea: 10 most famous Bermuda Triangle disappearences </center> 
+				<center> Lost at Sea: 10 most famous Bermuda Triangle disappearences </center></a>
 			</div>
-			<div class= "box four">
+			<div class= "box four"><a href= "extra.html">
 				<br>
-				<center> Extra Caylene content </center> 
+				<center> Extra Caylene content </center></a>
 			</div>
 			<div class= "box main">
 				<center>
